Fixed small graphic bug causing a scrollbar where it shouldn't

--- a/modules/LVSURVEY/css/LVSURVEY.css
+++ b/modules/LVSURVEY/css/LVSURVEY.css
@@ -9,6 +9,10 @@
 	padding : 0px;
 	overflow : auto;
 }
+
+.LVSURVEYQuestion{
+    padding : 5px;
+}
 	
 .LVSURVEYLineTitle, .LVSURVEYQuestionTitle, .LVSURVEYParticipationTitle, .LVSURVEYBlocTitle {
 	list-style-type : decimal;
